<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">My Music Player</string>

    <string name="nav_drawer_open">Open drawer</string>
    <string name="nav_drawer_close">Close drawer</string>
    <string name="nav_menu_login">WELCOME KUNDAN</string>
    <string name="nav_menu_playlists">Playlists</string>
    <string name="nav_menu_tracks">All Musics</string>
    <string name="nav_menu_albums">Albums</string>
    <string name="nav_menu_artists">Artists</string>
    <string name="nav_menu_genre">Genre</string>
    <string name="nav_menu_folders">Sources</string>

    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_audio_effects">Audio Effects</string>
    <string name="action_play">Play</string>
    <string name="action_share">Share</string>

    <string name="nav_welcome_note">WELCOME KUNDAN</string>

    <string name="search">Search</string>
    <string name="nothing_found">No Media Found</string>
    <string name="no_equalizer">No Equalizer found</string>

    <string name="error_loading_media">Error while Loading Media</string>
    <string name="error_no_metadata">Unable to retrieve media files.</string>
    <string name="title_activity_now_playing">Now Playing</string>
    <string name="title_activity_settings">Settings</string>
    <string name="music_library">Music Library</string>
    <string name="title_activity_dedications">Dedications</string>
    <string name="title_activity_dedicate">Dedicate</string>
    <string name="title_activity_cutter">Audio Editor</string>

    <!-- Notificaiton Channel -->
    <string name="notification_channel">Fire_Channel_ID</string>
    <string name="notification_channel_description">Channel ID for Fire</string>

</resources>
